[gd_scene format=3 uid="uid://c8m2k4l7xpqvr"]

[ext_resource type="Script" uid="uid://dqnnqwtb4yhr" path="res://scenes/game/game.gd" id="1_game"]
[ext_resource type="PackedScene" uid="uid://c6x7rwkm2h8jt" path="res://entities/table/table.tscn" id="2_table"]
[ext_resource type="PackedScene" uid="uid://djq8m2fk7xc5l" path="res://entities/dice_manager/dice_manager.tscn" id="3_dice_manager"]
[ext_resource type="PackedScene" uid="uid://cw8m5hvp2ql7r" path="res://ui/hud/hud.tscn" id="4_hud"]
[ext_resource type="PackedScene" uid="uid://cn8vj5d2ql7mx" path="res://ui/game_over/game_over.tscn" id="7_game_over"]
[ext_resource type="PackedScene" uid="uid://dh7m2xlalp4qv" path="res://ui/upgrade_screen/upgrade_screen.tscn" id="8_upgrade_screen"]
[ext_resource type="Shader" uid="uid://b30rplgnr3k2" path="res://shaders/pixelate.gdshader" id="9_pixelate"]
[ext_resource type="PackedScene" uid="uid://bm7k2xp5ql8vn" path="res://ui/hand_display/hand_display.tscn" id="10_reserve_display"]
[ext_resource type="PackedScene" path="res://ui/score_display/score_display.tscn" id="11_score_display"]
[ext_resource type="PackedScene" path="res://ui/action_bar/action_bar.tscn" id="12_action_bar"]
[ext_resource type="PackedScene" uid="uid://b4tec2ymj0kbv" path="res://ui/roll_button/roll_button.tscn" id="13_roll_button"]
[ext_resource type="PackedScene" path="res://ui/inventory_deck/inventory_deck.tscn" id="14_inventory_deck"]
[ext_resource type="PackedScene" path="res://ui/dice_tooltip/dice_tooltip.tscn" id="15_dice_tooltip"]
[ext_resource type="PackedScene" path="res://ui/dice_stats/dice_stats.tscn" id="16_dice_stats"]
[ext_resource type="PackedScene" path="res://ui/category_breakdown/category_breakdown.tscn" id="17_category_breakdown"]
[ext_resource type="PackedScene" path="res://ui/ornament_grid/ornament_grid_ui.tscn" id="18_ornament_grid"]
[ext_resource type="PackedScene" path="res://ui/ornament_grid/ornament_mini_grid.tscn" id="19_ornament_mini_grid"]
[ext_resource type="Script" uid="uid://be0n8263vsi7u" path="res://globals/state_machine/states/game_over_state.gd" id="game_over_state"]
[ext_resource type="Script" uid="uid://bgideag8ai4qt" path="res://globals/state_machine/states/post_roll_state.gd" id="post_roll_state"]
[ext_resource type="Script" uid="uid://bknp5u7rhfdl4" path="res://globals/state_machine/states/pre_roll_state.gd" id="pre_roll_state"]
[ext_resource type="Script" uid="uid://cssakh1hta1cp" path="res://globals/state_machine/states/rolling_state.gd" id="rolling_state"]
[ext_resource type="Script" uid="uid://de86a700gaq64" path="res://globals/state_machine/states/scoring_state.gd" id="scoring_state"]
[ext_resource type="Script" uid="uid://c0611asothgpk" path="res://globals/state_machine/states/setup_state.gd" id="setup_state"]
[ext_resource type="Script" uid="uid://cvia4x0pfap6u" path="res://globals/state_machine/game_state_machine.gd" id="state_machine"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_env"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_env"]
background_mode = 1
background_color = Color(1, 1, 1, 1)
sky = SubResource("Sky_env")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pixelate"]
shader = ExtResource("9_pixelate")
shader_parameter/pixelate_size = 5.00000019
shader_parameter/reference_height = 1280.000038
shader_parameter/color_levels = 16.0

[node name="Game" type="Control" unique_id=1578359998]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game")

[node name="SubViewportContainer" type="SubViewportContainer" parent="." unique_id=1498867438]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer" unique_id=1495077085]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="World3D" type="Node3D" parent="SubViewportContainer/SubViewport" unique_id=423903647]

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/World3D" unique_id=372904548]
environment = SubResource("Environment_env")

[node name="Table" parent="SubViewportContainer/SubViewport/World3D" unique_id=2050281813 instance=ExtResource("2_table")]

[node name="DiceManager" parent="SubViewportContainer/SubViewport/World3D" unique_id=1544377139 instance=ExtResource("3_dice_manager")]

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/World3D" unique_id=1091647069]
transform = Transform3D(1, 0, 0, 0, 2.3841858e-07, 1, 0, -1, 2.3841858e-07, 0, 30, 0)
projection = 1
current = true
size = 16.98

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/World3D" unique_id=2103781492]
transform = Transform3D(0.86602527, -0.25000027, 0.43301278, -0.35355353, 0.30618584, 0.8838834, -0.35355356, -0.9185587, 0.17677626, 0, 17, 0)
shadow_enabled = true

[node name="PixelateEffect" type="ColorRect" parent="." unique_id=443855031]
material = SubResource("ShaderMaterial_pixelate")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=956316046]

[node name="HUD" parent="CanvasLayer" unique_id=909889082 instance=ExtResource("4_hud")]

[node name="GameOver" parent="CanvasLayer" unique_id=753122824 instance=ExtResource("7_game_over")]

[node name="UpgradeScreen" parent="CanvasLayer" unique_id=1555253837 instance=ExtResource("8_upgrade_screen")]

[node name="HandDisplay" parent="CanvasLayer" unique_id=1985327070 instance=ExtResource("10_reserve_display")]

[node name="ScoreDisplay" parent="CanvasLayer" instance=ExtResource("11_score_display")]

[node name="CategoryBreakdown" parent="CanvasLayer" instance=ExtResource("17_category_breakdown")]

[node name="ActionBar" parent="CanvasLayer" instance=ExtResource("12_action_bar")]

[node name="DiceStats" parent="CanvasLayer" unique_id=551138598 instance=ExtResource("16_dice_stats")]

[node name="RollButton" parent="CanvasLayer" unique_id=1637481334 instance=ExtResource("13_roll_button")]

[node name="InventoryDeck" parent="CanvasLayer" unique_id=334932875 instance=ExtResource("14_inventory_deck")]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -190.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0

[node name="DiceTooltip" parent="CanvasLayer" unique_id=956099878 instance=ExtResource("15_dice_tooltip")]

[node name="OrnamentGridUI" parent="CanvasLayer" instance=ExtResource("18_ornament_grid")]

[node name="OrnamentMiniGrid" parent="CanvasLayer" instance=ExtResource("19_ornament_mini_grid")]

[node name="StateMachine" type="Node" parent="." unique_id=2064687143]
script = ExtResource("state_machine")

[node name="SetupState" type="Node" parent="StateMachine" unique_id=670883674]
script = ExtResource("setup_state")

[node name="PreRollState" type="Node" parent="StateMachine" unique_id=1933258430]
script = ExtResource("pre_roll_state")

[node name="RollingState" type="Node" parent="StateMachine" unique_id=258059785]
script = ExtResource("rolling_state")

[node name="PostRollState" type="Node" parent="StateMachine" unique_id=1914421397]
script = ExtResource("post_roll_state")

[node name="ScoringState" type="Node" parent="StateMachine" unique_id=880554659]
script = ExtResource("scoring_state")

[node name="GameOverState" type="Node" parent="StateMachine" unique_id=73281343]
script = ExtResource("game_over_state")
